fixed results grid alignment on plant search component

--- a/src/App.css
+++ b/src/App.css
@@ -225,9 +225,6 @@ Form.Control{
   border-radius: 0;
 }
 
-.card-link{
-  text-decoration: none;
-}
 
 /* --------------------SPECIES PAGE --------------------------*/
 
